Fix toolbar button label alignment

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -284,6 +284,7 @@ form {
     font-size: 1.6rem;
     .toolBarItem {
       .iconBig {
+        vertical-align: initial;
         font-size: inherit;
       }
     }
